--- a/index.html
+++ b/index.html
@@ -44,26 +44,43 @@
     <h3> Testing </h3>
     <p> This first test uses console logging to test if my boundary function is working properly.</p>
     <div><img class="imgSizer" src="box.jpg"></div>
-        <p> This second test explores how the bounding box appears when I click and drg in and out of the rectangle.<br>
+        <p> This second test explores how the bounding box appears when I click and drag in and out of the rectangle.<br>
         This could be a bit more user friendly by staying at the boundary if the user drags outside , 
         but this is a reasonable working version for now.
         </p>
-    <div class="vid_div"><video width="600"  controls>
+    <div class="vid_div"><video width="800"  controls>
             <source src="test1.mp4" type="video/mp4">
             Your browser does not support the video tag.
             </video>
         </div>
-        <p> This third test, tests whether I have completed my first sprint.<br>
-            Note the "double click" in the same place , this would have created an object with virtually no dimensions.<br>
-            Would probably be good to improve on this at some stage.
+        <p> This third test, tests whether I have completed my first sprint.
             </p>
-    <div class="vid_div"><video width="600"  controls>
-            <source src="version_one/withrectangelstest.mp4" type="video/mp4">
-            Your browser does not support the video tag.
-            </video>
-        </div>
-        Include a link to the file itself.
+            <div><img class="imgSizer" src="sprintOneImage.jpg"></div>
+        <li><a href="SPRINT1/index.html"> Sprint One File</a></li>
         <hr>
+        <h1>Second Sprint: </h1>
+        <p>My aim is to create an ellipse shape to draw on the canvas.<br>
+            Later I will combine this with the draw rectangle function to have a program that can draw multiple shapes. This will give me a potentially shippable product of <span class="bold">two </span>features.
+</p>
+        <h3>My Trello plan </h3>
+        <div><img class="imgSizer" src="sprintTwo.jpg"></div>
+        <h3> Testing </h3>
+        <p> This first test</p>
+        <div><img class="imgSizer" src="box.jpg"></div>
+            <p> This second test explores how the bounding box appears when I click and drag in and out of the rectangle.<br>
+            This could be a bit more user friendly by staying at the boundary if the user drags outside , 
+            but this is a reasonable working version for now.
+            </p>
+        <div class="vid_div"><video width="800"  controls>
+                <source src="test1.mp4" type="video/mp4">
+                Your browser does not support the video tag.
+                </video>
+            </div>
+            <p> This third test, tests whether I have completed my first sprint.
+                </p>
+                <div><img class="imgSizer" src="sprintOneImage.jpg"></div>
+            <li><a href="SPRINT2/index.html"> Sprint Two File</a></li>
+            <hr>
         
 </body>
 </html>
