--- a/sprints.html
+++ b/sprints.html
@@ -466,13 +466,13 @@
                     <source src="sprint10!.mp4" type="video/mp4">
                     Your browser does not support the video tag.
                     </video></div>
-            <p> This last test, tests the line function. I have finished my sprint. 
+            <p> This last test, tests if I have finished my sprint. This also shows one of the only problems I have with my redo button, the redid shapes appear on top of the object set shapes, however as the shapes all have a transparent color this is extremely unnoticabale so I don't believe this will be a big problem.
             </p>
             <div class="vid_div"><video width="800"  controls>
-                <source src="line.mp4" type="video/mp4">
+                <source src="finaltest.mp4" type="video/mp4">
                 Your browser does not support the video tag.
                 </video></div>
-                <p> Reflection: I would like to change the line function, and changing the outline to make it clearer that the function is drawing a line rather than a rectangle. I would like to create more of a brush function rather than a 'line'. It would nice if it draws while the user drags on the screen. So the drawing would need to pushed when the mouse is down rather than when the mouse comes up. 
+                <p> Reflection: The last few problems with the redo button I would want to try fix if I had more time, however it is extremely unnoticable to a user so I believe my final product is ready. 
                 </p>
             <li><a href="SPRINT10/index.html"> Final Product File</a></li>
             <hr>
