--- a/summary.html
+++ b/summary.html
@@ -130,9 +130,9 @@
         </P><hr>
 
             <h1>Product Backlog: </h1>
-    <p>This is my list of things I was hoping to create or build into my program in this assessment. If I analyse this list, it is clear I have achieved a large amount of the things I wanted to achieve for my program. If I was to build more features into my program, I would draw from these ideas or engage some users in testing to find out what potentional users wanted from my product. </p>
+    <p>This is an after photo of my list of things I was hoping to create or build into my program in this assessment. If I analyse this list, it is clear I have achieved a large amount of the things I wanted to achieve for my program. If I was to build more features into my program, I would draw from these ideas, like the rhombus or trapezoid button, or engage some users in testing to find out what potentional users wanted from my product. </p>
     <h3>My Trello plan </h3>
-    <div><img class="imgSizer" src="productBacklog.jpg"></div><hr>
+    <div><img class="imgSizer" src="prdBack.jpg"></div><hr>
 
 </body>
 </html>
