--- a/ANIMATION/objects.html
+++ b/ANIMATION/objects.html
@@ -21,7 +21,8 @@
     <canvas id='myCanvas'></canvas>
     <script type="text/javascript" src="init.js"> </script>
     <script type="text/javascript" src="ball.js"> </script>
-    <script type="text/javascript" src="bouncingBall.js"> </script>
-    <script type="text/javascript" src="ANIMATION.js"> </script>
+    <script type="text/javascript" src="MAIN.JS"> </script>
+    <script type="text/javascript" src="bouncingball.js"> </script>
+    <script type="text/javascript" src="ANIMATION.JS"> </script>
 </body>
 </html>
